--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     // Define versions in a single place
     ext {
         gradle_version = '3.3.1'
+        maven_gradle_version = '2.1'
         kotlin_version = '1.3.41'
         lifecycle_version = '2.0.0'
         appcompat_version = '1.1.0-rc01'
@@ -38,6 +39,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_gradle_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
