--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     // Define versions in a single place
     ext {
-        gradle_version = '3.3.1'
+        gradle_version = '3.4.2'
         maven_gradle_version = '2.1'
         kotlin_version = '1.3.41'
         lifecycle_version = '2.0.0'
-        appcompat_version = '1.1.0-rc01'
+        appcompat_version = '1.0.2'
         cardview_version = '1.0.0'
         recyclerview_version = '1.1.0-beta01'
         core_version = '1.2.0-alpha02'
@@ -37,7 +37,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_gradle_version"
         // NOTE: Do not place your application dependencies here; they belong
