--- a/mockinizer/build.gradle
+++ b/mockinizer/build.gradle
@@ -37,13 +37,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     implementation "com.squareup.okhttp3:mockwebserver:$mockserver_version"
     implementation "com.squareup.okhttp3:okhttp:$mockserver_version"
     implementation "com.squareup.okhttp3:okhttp-tls:$mockserver_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
