--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         gradle_version = '3.4.2'
         maven_gradle_version = '2.1'
         kotlin_version = '1.3.41'
+        kotlin_coroutines_version = '1.2.2'
         lifecycle_version = '2.0.0'
         appcompat_version = '1.0.2'
         cardview_version = '1.0.0'
