use mockinizer version 0.9 from jitpack.io

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         material_version = '1.0.0'
         dagger_version = '2.21'
         room_version = '2.1.0'
+        mockinizer_version = '0.9'
         logkitten_version = '1.2.2'
         dbinspector_version = '3.4.1@aar'
         mockito_kotlin_version = '2.1.0'
