--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_gradle_version"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.5.0.0"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
