--- a/mockinizer/build.gradle
+++ b/mockinizer/build.gradle
@@ -19,7 +19,7 @@ android {
         versionName "0.9.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        testInstrumentationRunnerArgument "runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder"
     }
 
     buildTypes {
@@ -35,6 +35,10 @@ android {
     }
 
     resourcePrefix 'mockinizer_'
+
+    packagingOptions {
+        exclude "META-INF/LICENSE*"
+    }
 
 }
 
@@ -54,4 +58,9 @@ dependencies {
 
     androidTestImplementation "androidx.test:runner:$testrunner_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
+    androidTestImplementation 'org.mockito:mockito-android:3.0.0'
+    androidTestImplementation "org.junit.jupiter:junit-jupiter-api:$junit5_version"
+    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.1.0"
+    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.1.0"
 }
