--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
-jdk: oraclejdk8	jdk:
-env:	  - oraclejdk8
+jdk: oraclejdk8
+env:
  global:	
     - ANDROID_API_LEVEL=28	
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3	
