--- a/mockinizer/build.gradle
+++ b/mockinizer/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junit5_version"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
+    testImplementation "org.assertj:assertj-core:$assertj_version"
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit5_version"
 
