issue#11 add mockError500 api call androidTest

--- a/mockinizer/build.gradle
+++ b/mockinizer/build.gradle
@@ -26,6 +26,7 @@ android {
 
         debug {
             buildConfigField("String", "BASE_URL", "\"https://my-json-server.typicode.com/typicode/demo/\"")
+            buildConfigField("Integer", "MOCKSERVER_PORT", "34567")
         }
 
         release {
