--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,24 @@ jdk: oraclejdk8
 env:
  global:	
     - ANDROID_API_LEVEL=28	
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3	
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_ABI=x86
+
 android:	
  components:	
     - tools	
     - platform-tools	
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION		
-    - android-$ANDROID_API_LEVEL	
-script:	
+    - android-$ANDROID_API_LEVEL
+    - extra-android-m2repository
+    - extra-google-m2repository
+    - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
+script:
+    - android list targets
+    - echo no | android create avd --force -n test -t android-28 --abi x86 -no-accel
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
     - ./gradlew build check
     - ./gradlew test
     - ./gradlew connectedAndroidTest
