--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ android:
     - platform-tools	
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION		
     - android-$ANDROID_API_LEVEL
-    - extra-android-m2repository
-    - extra-google-m2repository
     - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
 script:
     - android list targets
-    - echo no | android create avd --force -n test -t android-28 --abi x86 -no-accel
+    - android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -no-accel
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
