--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: android
 jdk: oraclejdk8
 env:
  global:	
-    - ANDROID_API_LEVEL=28	
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.3
     - ANDROID_ABI=x86
 
 android:	
@@ -12,11 +12,10 @@ android:
     - platform-tools	
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION		
     - android-$ANDROID_API_LEVEL
-    - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
 script:
     - android list targets
-    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI
-    - emulator -avd test -no-skin -no-audio -no-window &
+    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL
+    - emulator -avd test -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
     - ./gradlew build check
