--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ android:
     - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
 script:
     - android list targets
-    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL
+    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI
     - emulator -avd test -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
