--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
  global:	
     - ANDROID_API_LEVEL=25
     - ANDROID_BUILD_TOOLS_VERSION=25.0.3
-    - ANDROID_ABI=x86
+    - ANDROID_ABI=armeabi-v7a
 
 android:	
  components:	
