--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,27 @@
 language: android
 jdk: oraclejdk8
 env:
- global:	
-    - ANDROID_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS_VERSION=25.0.3
-    - ANDROID_ABI=armeabi-v7a
+  global:
+    - ANDROID_API_LEVEL=26
+    - ANDROID_BUILD_TOOLS_VERSION=26.0.2
+    - ANDROID_ABI=x86
 
-android:	
- components:	
-    - tools	
-    - platform-tools	
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION		
+android:
+  components:
+    - tools
+    - platform-tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
     - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
+
+before_script:
+  - android list targets
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
-    - android list targets
-    - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL
-    - emulator -avd test -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-    - ./gradlew build check
-    - ./gradlew test
-    - ./gradlew connectedAndroidTest
+  - ./gradlew build check
+  - ./gradlew test
+  - ./gradlew connectedAndroidTest
