--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   global:
     - ANDROID_API_LEVEL=26
     - ANDROID_BUILD_TOOLS_VERSION=26.0.2
-    - ANDROID_ABI=x86
+    - ANDROID_ABI=x86_64
 
 android:
   components:
