--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ android:
 before_script:
   - android list targets
   - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
-  - emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-audio -no-window -no-accel &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
