--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,25 @@ language: android
 jdk: oraclejdk8
 env:
   global:
-    - ANDROID_API_LEVEL=26
-    - ANDROID_BUILD_TOOLS_VERSION=26.0.2
-    - ANDROID_ABI=x86_64
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+    - ANDROID_ABI=x86
 
 android:
   components:
     - tools
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
+    - android-25
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
     - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
 
 before_script:
   - android list targets
   - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
-  - emulator -avd test -no-window -no-accel &
+  - emulator -avd test -memory 1500 -no-accel -gpu swiftshader -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
