--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ android:
 before_script:
   - android list targets
   - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
-  - emulator -avd test -memory 1500 -no-accel -gpu swiftshader -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
+  - emulator -avd test -no-accel -gpu swiftshader -no-window -no-skin -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
