--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ env:
   global:
     - ANDROID_API_LEVEL=25
     - ANDROID_BUILD_TOOLS_VERSION=25.0.2
-    - ANDROID_ABI=x86
 
 android:
   components:
@@ -12,17 +11,9 @@ android:
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-25
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - sys-img-$ANDROID_ABI-android-$ANDROID_API_LEVEL
 
 before_script:
-  - android list targets
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
-  - emulator -avd test -no-accel -gpu swiftshader -no-window -no-skin -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
 
 script:
   - ./gradlew build check
