--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@ language: android
 jdk: oraclejdk8
 env:
   global:
-    - ANDROID_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+    - ANDROID_API_LEVEL=28
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
 
 android:
   components:
     - tools
+    - tools
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-25
+    - android-$ANDROID_API_LEVEL
 
 before_script:
   - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
