--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
   global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_ABI=x86
 
 android:
   components:
@@ -15,8 +16,10 @@ android:
 
 before_script:
   - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
+  - emulator -avd test -no-accel -gpu swiftshader -no-window -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
-  - ./gradlew build check
-  - ./gradlew test
-  - ./gradlew connectedAndroidTest
+  - ./gradlew build connectedCheck
