--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ android:
     - tools
     - tools
     - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
+    - build-tools-28.0.3
+    - android-27
 
 before_script:
-  - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
+  - yes | sdkmanager "platforms;android-27"
+  - echo no | android create avd --force -n test -t android-27 --abi x86_64 -c 100M
   - emulator -avd test -no-accel -gpu swiftshader -no-window -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
