--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,24 @@ language: android
 jdk: oraclejdk8
 env:
   global:
+    - ANDROID_EMULATOR_LEVEL=25
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_ABI=x86_64
+    - ANDROID_ABI=armeabi-v7a
 
 android:
   components:
     - tools
     - tools
     - platform-tools
-    - build-tools-28.0.3
-    - android-27
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - android-$ANDROID_EMULATOR_LEVEL
+    - sys-img-$ANDROID_ABI-android-$ANDROID_EMULATOR_LEVEL
 
 before_script:
-  - yes | sdkmanager "platforms;android-27"
-  - echo no | android create avd --force -n test -t android-27 --abi x86_64 -c 100M
+  - yes | sdkmanager "platforms;android-$ANDROID_EMULATOR_LEVEL;$ANDROID_ABI"
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
   - emulator -avd test -no-accel -gpu swiftshader -no-window -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
