--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 jdk: oraclejdk8
 env:
   global:
-    - ANDROID_EMULATOR_LEVEL=25
+    - ANDROID_EMULATOR_LEVEL=24
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
@@ -23,6 +23,7 @@ before_script:
   - emulator -avd test -no-accel -gpu swiftshader -no-window -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+  - adb shell input keyevent 1 &
 
 script:
   - ./gradlew build connectedCheck
