--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ android:
     - sys-img-$ANDROID_ABI-android-$ANDROID_EMULATOR_LEVEL
 
 before_script:
-  - yes | sdkmanager "platforms;android-$ANDROID_EMULATOR_LEVEL;$ANDROID_ABI"
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI -c 100M
+  - echo no | android create avd --force -n test -t android-$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI -c 100M
   - emulator -avd test -no-accel -gpu swiftshader -no-window -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
