--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,30 @@ env:
     - ANDROID_ABI=armeabi-v7a
 
 android:
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
   components:
     - tools
     - tools
     - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-    - android-$ANDROID_EMULATOR_LEVEL
-    - sys-img-$ANDROID_ABI-android-$ANDROID_EMULATOR_LEVEL
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - build-tools-28.0.3
+    - android-22
+    - sys-img-armeabi-v7a-android-22
+
+before_install:
+  - yes | sdkmanager "platforms;android-27"
+  - yes | sdkmanager "platforms;android-28"
 
 before_script:
-  - echo no | android create avd --force -n test -t android-$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI -c 100M
-  - emulator -avd test -no-accel -gpu swiftshader -no-window -camera-back none -camera-front none -no-boot-anim -no-snapshot-save -no-snapstorage
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-  - adb shell input keyevent 1 &
 
 script:
   - ./gradlew build connectedCheck
