--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: android
 jdk: oraclejdk8
 env:
   global:
-    - ANDROID_EMULATOR_LEVEL=24
+    - ANDROID_EMULATOR_LEVEL=22
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
@@ -19,16 +19,16 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    - build-tools-28.0.3
-    - android-22
-    - sys-img-armeabi-v7a-android-22
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_EMULATOR_LEVEL
+    - sys-img-$ANDROID_ABI-android-$ANDROID_EMULATOR_LEVEL
 
 before_install:
-  - yes | sdkmanager "platforms;android-27"
-  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "platforms;android-$ANDROID_EMULATOR_LEVEL"
+  - yes | sdkmanager "platforms;android-$ANDROID_API_LEVEL"
 
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
