--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ buildscript {
         classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_gradle_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.5.0.0"
 
+//        detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:1.7.4"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -40,7 +42,25 @@ buildscript {
 plugins {
     // This plugin allows publishing android libraries
     id "com.github.dcendents.android-maven" version "2.0"
+    id("io.gitlab.arturbosch.detekt").version("1.7.4")
 }
+
+detekt {
+    failFast = true // fail build on any finding
+    buildUponDefaultConfig = true // preconfigure defaults
+    config = files("$projectDir/config/detekt.yml") // point to your custom config defining rules to run, overwriting default behavior
+    baseline = file("$projectDir/config/baseline.xml") // a way of suppressing issues before introducing detekt
+
+    reports {
+        html.enabled = true // observe findings in your browser with structure and code snippets
+        xml.enabled = true // checkstyle like format mainly for integrations like Jenkins
+        txt.enabled = true // similar to the console output, contains issue signature to manually edit baseline files
+    }
+}
+
+
+// Groovy dsl
+tasks.detekt.jvmTarget = "1.8"
 
 allprojects {
     repositories {
